book에 별점 부여가능, 평균별점 표시

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
         format_sql: true
 
   thymeleaf:
-  prefix: classpath:/templates/
+  prefix: classpath:/templates/, classpath:/static/
   suffix: .html
 
 logging.level:
